<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="guest_login">Login As Guest</string>
    <string name="create">Create</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="millions_of_movies_tv_shows_and_people_to_discover">Millions of movies, TV shows and people to discover.</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="sign_in_to_contiune">Sign in to continue</string>
    <string name="username_required">Username Is Required</string>
    <string name="password_required">Password Is Required</string>
</resources>